--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: audio_widget
-description: A new Flutter package.
+description: Play an audio on flutter can be as simple as display an image ! Just add a widget into the tree
 version: 0.0.1
-author:
-homepage:
+author: Florent Champigny <champigny.florent@gmail.com>
+homepage: https://github.com/florent37/Flutter-AssetsAudioPlayer
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
